--- a/products-api/build.gradle
+++ b/products-api/build.gradle
@@ -18,6 +18,7 @@ apply plugin:"idea"
 apply plugin:"war"
 apply plugin:"org.grails.grails-web"
 apply plugin:"org.grails.plugins.views-json"
+apply plugin: "jacoco"
 
 repositories {
     mavenLocal()
@@ -55,6 +56,7 @@ dependencies {
     testCompile "org.grails.plugins:geb"
     testCompile "org.grails:grails-datastore-rest-client"
     testCompile "org.grails:grails-web-testing-support"
+    testCompile "org.spockframework:spock-core:1.1-groovy-2.4-rc-2"
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
 }
