--- a/purchase-api/gradle.properties
+++ b/purchase-api/gradle.properties
@@ -1,3 +1,4 @@
-grailsVersion=3.3.0
-gormVersion=6.1.6.RELEASE
-gradleWrapperVersion=3.5
+#Fri Aug 04 19:38:16 BRT 2017
+grailsVersion=3.1.16
+grailsWrapperVersion=1.0.0
+gradleWrapperVersion=2.13
