--- a/purchase-api/settings.gradle
+++ b/purchase-api/settings.gradle
@@ -1,4 +1,2 @@
-rootProject.name = 'purchase-api'
-rootProject.name = 'purchase-api'
-rootProject.name = 'purchase-api'
+rootProject.name = 'products-api'
 
