--- a/products-api/gradle.properties
+++ b/products-api/gradle.properties
@@ -1,4 +1,5 @@
-#Mon Nov 27 14:05:59 BRST 2017
-grailsVersion=3.1.16
+#Mon Nov 27 17:03:32 BRST 2017
+grailsVersion=3.3.1
 grailsWrapperVersion=1.0.0
-gradleWrapperVersion=2.13
+gormVersion=6.1.7.RELEASE
+gradleWrapperVersion=3.5
