--- a/purchase-api/build.gradle
+++ b/purchase-api/build.gradle
@@ -9,17 +9,17 @@ buildscript {
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
-        classpath "org.grails.plugins:hibernate4:5.0.10"
-        classpath "org.grails.plugins:views-gradle:1.0.12"
+        classpath "org.grails.plugins:hibernate5:${gormVersion-".RELEASE"}"
+        classpath "org.grails.plugins:views-gradle:1.1.6"
     }
 }
 
-version "0.1"
+version "0.2"
 group "purchase.api"
 
-apply plugin:"eclipse"
-apply plugin:"idea"
-//apply plugin:"war" // We want a Java Standalone Package
+apply plugin: "eclipse"
+apply plugin: "idea"
+apply plugin: "war"
 apply plugin:"org.grails.grails-web"
 apply plugin:"org.grails.plugins.views-json"
 
@@ -34,11 +34,9 @@ repositories {
     maven { url "https://repo.grails.org/grails/core" }
 }
 
-dependencyManagement {
-    imports {
-        mavenBom "org.grails:grails-bom:$grailsVersion"
-    }
-    applyMavenExclusions false
+bootRun {
+    jvmArgs('-Dspring.output.ansi.enabled=always')
+    addResources = true
 }
 
 dependencies {
@@ -54,26 +52,66 @@ dependencies {
     compile "org.grails:grails-plugin-services"
     compile "org.grails:grails-plugin-datasource"
     compile "org.grails:grails-plugin-databinding"
-    compile "org.grails:grails-plugin-async"
     compile "org.grails:grails-web-boot"
     compile "org.grails:grails-logging"
     compile "org.grails.plugins:cache"
-    compile "org.grails.plugins:hibernate4"
-    compile "org.hibernate:hibernate-ehcache"
+    compile "org.grails.plugins:async"
+    compile "org.grails.plugins:events"
+    compile "org.grails.plugins:hibernate5"
+    compile "org.hibernate:hibernate-core:5.1.5.Final"
     compile "org.grails.plugins:views-json"
-    compile 'org.grails:grails-datastore-rest-client'
+    compile "org.grails.plugins:views-json-templates"
     compile 'io.jsonwebtoken:jjwt:0.7.0'
 
+    runtime "org.glassfish.web:el-impl:2.1.2-b03"
     runtime 'mysql:mysql-connector-java'
     runtime "com.h2database:h2"
 
-    testCompile "org.grails:grails-plugin-testing"
+    testCompile "org.grails:grails-gorm-testing-support"
     testCompile "org.grails.plugins:geb"
     testCompile "org.grails:grails-datastore-rest-client"
+    testCompile "org.grails:grails-web-testing-support"
+
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
 
     console "org.grails:grails-console"
 
     profile "org.grails.profiles:rest-api"
+}
+
+task buildDockerImage(type:Exec) {
+    group = 'docker'
+    description = 'Buid Purchase API Docker Image'
+    commandLine 'docker', 'build', '-f', 'build/docker/Dockerfile', '-t', "purchase-api", 'build/docker'
+
+    doFirst {
+        println ">> Creating image: purchase-api"
+        /* copy the generate war file to /build/docker/app */
+        copy {
+            from war.archivePath
+            into 'build/docker/app/'
+        }
+        /* copy artifacts from src/main/docker/app into the build/docker/app */
+        copy {
+            from 'src/main/docker/app/'
+            into 'build/docker/app'
+        }
+        /* copy Dockerfile from src/main/docker into the build/docker */
+        copy {
+            from('src/main/docker/') {
+                include 'Dockerfile'
+            }
+            into 'build/docker'
+        }
+        /* copy docker-entrypoint.sh from src/main/docker into the build/docker */
+        copy {
+            from('src/main/docker/') {
+                include 'docker-entrypoint.sh'
+            }
+            into 'build/docker/app'
+        }
+        /* rename war file to application.jar */
+        file("build/docker/app/${war.archiveName}").renameTo("build/docker/app/application.jar")
+    }
 }
