--- a/products-api/build.gradle
+++ b/products-api/build.gradle
@@ -1,7 +1,4 @@
 buildscript {
-    ext {
-        grailsVersion = project.grailsVersion
-    }
     repositories {
         mavenLocal()
         maven { url "https://repo.grails.org/grails/core" }
@@ -14,12 +11,12 @@ buildscript {
     }
 }
 
-version "0.2"
+version "0.1"
 group "products.api"
 
-apply plugin: "eclipse"
-apply plugin: "idea"
-apply plugin: "war"
+apply plugin:"eclipse"
+apply plugin:"idea"
+apply plugin:"war"
 apply plugin:"org.grails.grails-web"
 apply plugin:"org.grails.plugins.views-json"
 
@@ -52,22 +49,21 @@ dependencies {
     compile "org.grails:grails-plugin-services"
     compile "org.grails:grails-plugin-datasource"
     compile "org.grails:grails-plugin-databinding"
+    compile "org.grails:grails-plugin-async"
     compile "org.grails:grails-web-boot"
     compile "org.grails:grails-logging"
     compile "org.grails.plugins:cache"
-    compile "org.grails.plugins:async"
-    compile "org.grails.plugins:events"
     compile "org.grails.plugins:hibernate5"
-    compile "org.hibernate:hibernate-core:5.1.5.Final"
+    compile "org.hibernate:hibernate-core:5.1.3.Final"
+    compile "org.hibernate:hibernate-ehcache:5.1.3.Final"
     compile "org.grails.plugins:views-json"
     compile "org.grails.plugins:views-json-templates"
-    compile 'io.jsonwebtoken:jjwt:0.7.0'
+    compile "io.jsonwebtoken:jjwt:0.7.0"
 
-    runtime "org.glassfish.web:el-impl:2.1.2-b03"
-    runtime 'mysql:mysql-connector-java'
+    runtime "mysql:mysql-connector-java"
     runtime "com.h2database:h2"
 
-    testCompile "org.grails:grails-gorm-testing-support"
+    testCompile "org.grails:grails-plugin-testing"
     testCompile "org.grails.plugins:geb"
     testCompile "org.grails:grails-datastore-rest-client"
     testCompile "org.grails:grails-web-testing-support"
