--- a/products-api/grails-app/conf/application.yml
+++ b/products-api/grails-app/conf/application.yml
@@ -1,76 +1,75 @@
 ---
 hibernate:
-    cache:
-        queries: false
-        use_second_level_cache: true
-        use_query_cache: false
-        region.factory_class: org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
-
+  cache:
+    queries: false
+    use_second_level_cache: false
+    use_query_cache: false
 dataSource:
-    pooled: true
-    jmxExport: true
-    driverClassName: org.h2.Driver
-    username: sa
-    password:
+  pooled: true
+  jmxExport: true
+  driverClassName: org.h2.Driver
+  username: sa
+  password: ''
 dataSourceProduction:
-    pooled: true
-    jmxExport: true
-    driverClassName: com.mysql.jdbc.Driver
-    dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-    username: commerce
-    password: 'commerceapi'
-
+  pooled: true
+  jmxExport: true
+  driverClassName: com.mysql.jdbc.Driver
+  dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+  username: commerce
+  password: 'commerceapi'
 environments:
-    development:
-        dataSource:
-            dbCreate: create-drop
-            url: jdbc:h2:mem:productsDev;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-    test:
-        dataSource:
-            dbCreate: update
-            url: jdbc:h2:mem:productsTest;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-    production:
-        dataSource:
-            dbCreate: none
-            url: dbc:mysql://127.0.0.1:3306/productsapi
-
----
+  development:
+    dataSourceProduction:
+      dbCreate: create-drop
+      url: dbc:mysql://127.0.0.1:3306/productsapi
+  test:
+    dataSourceProduction:
+      dbCreate: update
+      url: dbc:mysql://127.0.0.1:3306/productsapi
+  production:
+    dataSourceProduction:
+      dbCreate: none
+      url: dbc:mysql://127.0.0.1:3306/productsapi
 ---
 grails:
-    profile: rest-api
-    codegen:
-        defaultPackage: products.api
-    spring:
-        transactionManagement:
-            proxies: false
+  profile: rest-api
+  codegen:
+    defaultPackage: grails
+  spring:
+    transactionManagement:
+      proxies: false
+  gorm:
+    reactor:
+      events: false
 info:
-    app:
-        name: '@info.app.name@'
-        version: '@info.app.version@'
-        grailsVersion: '@info.app.grailsVersion@'
+  app:
+    name: '@info.app.name@'
+    version: '@info.app.version@'
+    grailsVersion: '@info.app.grailsVersion@'
 spring:
-    groovy:
-        template:
-            check-template-location: false
+  main:
+    banner-mode: "off"
+  groovy:
+    template:
+      check-template-location: false
 endpoints:
-    enabled: false
-    jmx:
-        enabled: true
+  enabled: false
+  jmx:
+    enabled: true
+---
+grails:
+  mime:
+    types:
+      all: '*/*'
+      json:
+        - application/json
+        - text/json
+  urlmapping:
+    cache:
+      maxsize: 1000
+  controllers:
+    defaultScope: singleton
+  converters:
+    encoding: UTF-8
 server:
   port: 8080
-
----
-grails:
-    mime:
-        types:
-            all: '*/*'
-            json:
-              - application/json
-              - text/json
-    urlmapping:
-        cache:
-            maxsize: 1000
-    controllers:
-        defaultScope: singleton
-    converters:
-        encoding: UTF-8
