--- a/purchase-api/settings.gradle
+++ b/purchase-api/settings.gradle
@@ -1,1 +1,6 @@
 rootProject.name=''
+rootProject.name = 'purchase-api'
+rootProject.name = 'purchase-api'
+rootProject.name = 'purchase-api'
+rootProject.name = 'purchase-api'
+
