--- a/purchase-api/grails-app/conf/application.yml
+++ b/purchase-api/grails-app/conf/application.yml
@@ -21,11 +21,11 @@ environments:
   development:
     dataSource:
       dbCreate: create-drop
-      url: jdbc:h2:mem:purchaseDev;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE;DATABASE_TO_UPPER=false
+      url: jdbc:h2:mem:purchaseDev;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
   test:
     dataSource:
       dbCreate: update
-      url: jdbc:h2:mem:purchaseTest;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE;DATABASE_TO_UPPER=false
+      url: jdbc:h2:mem:purchaseTest;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
   production:
     dataSourceProduction:
       dbCreate: none
