--- a/purchase-api/grails-app/conf/application.yml
+++ b/purchase-api/grails-app/conf/application.yml
@@ -34,7 +34,7 @@ environments:
 grails:
   profile: rest-api
   codegen:
-    defaultPackage: grails
+    defaultPackage: purchase.api
   spring:
     transactionManagement:
       proxies: false
